fix-overflow

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -124,3 +124,11 @@
 .p-mb-4 p {
   @apply mb-4;
 }
+
+
+.overflow-hidden{
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+}
